--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -12,7 +12,7 @@ body {
     align-items: center;
     justify-content: center;
     font-size: 18px;
-    background: url(./pixel.jpg);
+    background: url(../Img/pixel.jpg);
     background-size: cover;
 }
 
