--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -16,6 +16,13 @@ body {
     background-size: cover;
 }
 
+.formulario-usuario{
+    justify-content: center;
+    width: 5%;
+    height: 10vh;
+
+}
+
 .container {
     width: 400px;
     max-width: 400px;
@@ -27,8 +34,8 @@ body {
 }
 
 .container,
-.form__input,
-.form__button {
+.formulario-input-group,
+.formulario-button {
     font: 500 1rem 'Quicksand', sans-serif;
 }
 
@@ -44,29 +51,29 @@ body {
     margin-bottom: 0;
 }
 
-.form__title {
-    margin-bottom: 2rem;
+.formulario-title {
+    margin-bottom: 5rem;
     text-align: center;
 }
 
-.form__message {
+.formulario__message {
     text-align: center;
     margin-bottom: 1rem;
 }
 
-.form__message--success {
+.formulario__message--success {
     color: var(--color-success);
 }
 
-.form__message--error {
+.formulario__message--error {
     color: var(--color-error);
 }
 
-.form__input-group {
+.formulario__input-group {
     margin-bottom: 1rem;
 }
 
-.form__input {
+.formulario-input {
     display: block;
     width: 100%;
     padding: 0.75rem;
@@ -94,7 +101,7 @@ body {
     color: var(--color-error);
 }
 
-.form__button {
+.formulario-button {
     width: 100%;
     padding: 1rem 2rem;
     font-weight: bold;
@@ -107,24 +114,24 @@ body {
     background: var(--color-primary);
 }
 
-.form__button:hover {
+.formulario-button:hover {
     background: var(--color-primary-dark);
 }
 
-.form__button:active {
+.formulario-button:active {
     transform: scale(0.98);
 }
 
-.form__text {
+.formulario-text {
     text-align: center;
 }
 
-.form__link {
+.formulario-link {
     color: var(--color-secondary);
     text-decoration: none;
     cursor: pointer;
 }
 
-.form__link:hover {
+.formulario-link:hover {
     text-decoration: underline;
 }
