--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -52,8 +52,9 @@ body {
 }
 
 .formulario-title {
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
     text-align: center;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .formulario__message {
