--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -33,13 +33,21 @@ body {
     background: #ffffff;
 }
 
+.img{
+    justify-content: center;
+    width: 4rem;
+    margin-left: 10rem;
+    
+}
+
 .container,
 .formulario-input-group,
 .formulario-button {
     font: 500 1rem 'Quicksand', sans-serif;
+    margin-bottom: 1rem;
 }
 
-.form--hidden {
+.formulario-hidden {
     display: none;
 }
 
@@ -57,20 +65,20 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.formulario__message {
+.formulario-message {
     text-align: center;
     margin-bottom: 1rem;
 }
 
-.formulario__message--success {
+.formulario-message--success {
     color: var(--color-success);
 }
 
-.formulario__message--error {
+.formulario-message--error {
     color: var(--color-error);
 }
 
-.formulario__input-group {
+.formulario-input-group {
     margin-bottom: 1rem;
 }
 
@@ -86,17 +94,17 @@ body {
     transition: background 0.2s, border-color 0.2s;
 }
 
-.form__input:focus {
+.formulario-button:hover:focus {
     border-color: var(--color-primary);
     background: #ffffff;
 }
 
-.form__input--error {
+.formulario-input--error {
     color: var(--color-error);
     border-color: var(--color-error);
 }
 
-.form__input-error-message {
+.formulario-input-error-message {
     margin-top: 0.5rem;
     font-size: 0.85rem;
     color: var(--color-error);
