--- a/Css/estilos.css
+++ b/Css/estilos.css
@@ -65,16 +65,16 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.formulario-message {
+.formulario-mensaje {
     text-align: center;
     margin-bottom: 1rem;
 }
 
-.formulario-message--success {
+.formulario-mensaje-success {
     color: var(--color-success);
 }
 
-.formulario-message--error {
+.formulario-mensaje-error {
     color: var(--color-error);
 }
 
@@ -99,12 +99,12 @@ body {
     background: #ffffff;
 }
 
-.formulario-input--error {
+.formulario-input-error {
     color: var(--color-error);
     border-color: var(--color-error);
 }
 
-.formulario-input-error-message {
+.formulario-input-error-mensaje {
     margin-top: 0.5rem;
     font-size: 0.85rem;
     color: var(--color-error);
